--- a/style.css
+++ b/style.css
@@ -1,19 +1,119 @@
-h1{
-    
+h1 {
+
     background-color: rgba(17, 171, 35, 0.619);
     color: #fff;
     border-radius: 20px;
-    padding: 20px; text-align: center; 
+    padding: 20px;
+    text-align: center;
+
 }
-img{
+
+img {
     height: 25%;
     width: 25%;
 }
-body{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+body {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    
+
 }
-div{
-    padding-top: 13%;
+
+div.tit {
+    padding-left: 350px;
+    padding-right: 350px;
+    padding-top: 15%;
+    padding-bottom: 20%;
     display: flex;
     align-items: center;
+    justify-content: center;
+
 }
+
+img#back {
+    z-index: -10;
+    height: 98%;
+    width: 100%;
+    position: absolute;
+}
+
+
+
+/* navbar here */
+header {
+    padding: 20px 0;
+    background: repeating-linear-gradient(45deg, #f0f2ed, #f0f2ed 20px, #f8f4eb 20px, #f8f4eb 40px);
+    box-shadow: 0 4px 6px rgba(0,0,0,.2);  
+  }
+  .container {
+    padding: 0 20px;
+    max-width: 960px;
+    margin: 0 auto;
+  }
+  .logo-box {
+    float: left;
+    margin-right: 20px;
+  }
+  .logo-box a {
+    outline: none;
+    display: block;
+  }
+  .logo-box img {display: block;}
+  nav {
+    overflow: hidden;
+  }
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    float: right;
+  }
+  nav li {
+    display: inline-block;
+    margin-left: 25px;
+    height: 70px;
+    line-height: 70px;
+    transition: .5s linear;
+  }
+  nav a {
+    text-decoration: none;
+    display: block;
+    position: relative;
+    color: #868686;
+    text-transform: uppercase;
+  }
+  nav a:after {
+    content: "";
+    width: 0;
+    height: 2px;
+    position: absolute;
+    left: 0;
+    bottom: 15px;
+    background: #868686;
+    transition: width .5s linear;  
+  }
+  nav a:hover:after {width: 100%;}
+  
+  @media screen and (max-width: 660px) {
+    header {text-align: center;}
+    .logo-box {
+      float: none;
+      display: inline-block;
+      margin: 0 0 16px 0;
+    }
+    ul {float: none;}
+    nav li:first-of-type {margin-left: 0;}
+  }
+  @media screen and (max-width: 550px) {
+  nav {overflow: visible;}
+  nav li {
+    display: block;
+    margin: 0;
+    height: 40px;
+    line-height: 40px;
+  }
+  nav li:hover {background: rgba(0,0,0,.1);}
+  nav a:after {content: none;}
+  }
+/* navbar ends */
